tests/ui/recursion/infinite-instantiation-via-nested-closures.stderr
error: reached the recursion limit while instantiating `D::matches::<{closure@$DIR/infinite-instantiation-via-nested-closures.rs:40:23: 40:25}>`
  --> $DIR/infinite-instantiation-via-nested-closures.rs:40:9
   |
LL |         base.matches(&|| C(base.clone()).matches(f))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `D::matches` defined here
  --> $DIR/infinite-instantiation-via-nested-closures.rs:49:5
   |
LL |     pub fn matches<F: Fn()>(&self, f: &F) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

